# up-spiderplan

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
notebook/: Combined Task and Motion Planning.ipynb  converted-from-up.aiddl
spiderplan-grpc-server/: Dockerfile  build.sbt  docker-compose.yml
spiderplan-grpc-server/src/main/scala/org/spiderplan/unified_planning/: SpiderPlanInstance.scala  SpiderplanUpServer.scala  SpiderplanUpServerPsp.scala
spiderplan-grpc-server/src/test/resources/classical/: classical-1.aiddl
spiderplan-grpc-server/src/test/resources/office/: office-1.aiddl  office-2.aiddl
spiderplan-grpc-server/src/test/scala/: ClassicalPlanningSuite.scala  OfficeSuite.scala
src/up_spiderplan/: converter.py  solver.py  test.py
tests/: test.py  test_classical.py
tests/combined_task_motion_planning/logistics/maps/: logistics-map-1.yaml
tests/combined_task_motion_planning/office/: test_03.py
up-mp-extension/: up_mp_api_idea.py
up-spiderplan/: converter.py  solver.py  test.py
up_spiderplan/: converter.py  solver.py  test.py  util.py
up_spiderplan/combined_task_motion_planning/construction/: test_01.py  test_02.py  test_03.py
up_spiderplan/combined_task_motion_planning/construction/maps/: map-server-params.yaml
up_spiderplan/combined_task_motion_planning/logistics/: test_01.py
up_spiderplan/combined_task_motion_planning/office/: test_01.py  test_02.py
up_spiderplan/combined_task_motion_planning/office/maps/: office-map-1.xcf
