[metadata]
# replace with your username:
name = up_spideprlan
version = 0.0.1
author = Uwe Köckemann
author_email = uwe.kockemann@oru.se
description = Engine for the Unified Planning Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiplan4eu/up-spiderplan/
project_urls =
    Bug Tracker = https://github.com/aiplan4eu/up-spiderplan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src