[metadata]
name = up_spiderplan
version = 0.5.1
author = Uwe Köckemann
author_email = uwe.kockemann@oru.se
description = Spiderplan engine for the Unified Planning Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiplan4eu/up-spiderplan/
project_urls =
    Bug Tracker = https://github.com/aiplan4eu/up-spiderplan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    aiddl-core==0.3.0
    aiddl-external-grpc==0.1.4
    matplotlib==3.5.3
    unified-planning >=1.0.0

[options.packages.find]
where = .
